<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/editTextImmatriculation"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/immatriculation"
        android:inputType="text"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editTextMotDePasse"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        style="@style/Widget.Material3.Button.Filled" />

</LinearLayout>
